# ldaca_web_app_backend

./: .coveragerc  .gitignore  .gitmodules  .pytestignore  NOTICE  README.md  pyproject.toml  ty_check.out
.github/workflows/: ci.yml  release.yml
dist-tauri/backend-runtime/: runtime-manifest.json
docs/: index.md
docs/developer-guide/: analysis-and-workers.md  api-patterns.md  application-lifecycle.md  architecture.md  index.md  lazy-tokenisation-refactor.md  tokens-cache-portability.md  workspace-and-files.md
docs/reference/: api-overview.md  background-tasks.md  configuration.md  publishing.md
docs/tm-optimisation/: PLAN.md
docs/tutorials/: first-api-call.md
docs/user-guide/: running-locally.md
scripts/: check_model_updates.py  export_openapi.py  hatch_build.py  package_backend_runtime.py  split_models.py
src/ldaca_web_app/: __init__.py  _logging.py  cli.py  db.py  deploy.py  main.py  settings.py
src/ldaca_web_app/analysis/: __init__.py  manager.py  results.py
src/ldaca_web_app/api/: admin.py  auth.py  config.py  files.py  preferences.py  tasks.py  text.py
src/ldaca_web_app/core/: __init__.py  auth.py  derived_columns.py  embedding_cache.py  expression_parser.py  i18n.py  model_prefetch.py  mps_embedder.py  onnx_embedder.py  parent_watchdog.py  polars_expr_validator.py  polars_operations.py  preferences.py  quotation_extractor.py  utils.py  worker.py  worker_task_manager.py  worker_tasks_concordance.py  worker_tasks_download.py  worker_tasks_import.py  worker_tasks_quotation.py  worker_tasks_token.py  worker_tasks_topic.py  workspace.py
src/ldaca_web_app/models/: __init__.py  preferences.py
src/ldaca_web_app/resources/: __init__.py  stopwords_en.txt  stopwords_ja.txt  stopwords_ko.txt
src/ldaca_web_app_backend/: __init__.py  cli.py  db.py  deploy.py  main.py  settings.py
src/ldaca_web_app_backend/analysis/: manager.py  models.py
src/ldaca_web_app_backend/api/: admin.py  auth.py  feedback.py  files.py  tasks.py  text.py
src/ldaca_web_app_backend/core/: analysis_admin.py  api_models.py  docworkspace_data_types.py  expression_parser.py  utils.py  worker.py  worker_task_manager.py  worker_tasks_concordance.py  worker_tasks_download.py  worker_tasks_import.py  worker_tasks_quotation.py  worker_tasks_token.py  worker_tasks_topic.py  workspace.py
src/ldaca_web_app_backend/models/: __init__.py
src/ldaca_web_app_backend/resources/: stopwords_fr.txt
src/ldaca_wordflow/: __init__.py  _logging.py  _middleware.py  cli.py  db.py  main.py  server_launcher.py  settings.py  spa.py
src/ldaca_wordflow/analysis/: __init__.py  manager.py  models.py  results.py
src/ldaca_wordflow/api/: admin.py  auth.py  config.py  files.py  preferences.py  snapshots.py  tasks.py  text.py
src/ldaca_wordflow/core/: __init__.py  analysis_cache.py  analysis_helpers.py  api_models.py  auth.py  auth_service.py  data_loading.py  derived_columns.py  docs_sync.py  docworkspace_data_types.py  embedding_cache.py  exceptions.py  i18n.py  ldaca_tabular_config.py  model_prefetch.py  mps_embedder.py  oni_client.py  onnx_embedder.py  parent_watchdog.py  polars_expr_validator.py  polars_operations.py  preferences.py  quotation_extractor.py  sample_data.py  serialization.py  task_artifacts.py  text_normalize.py  tokenization.py  tokens_cache.py  tokens_cache_repair.py  tokens_lazy_migration.py  user_folders.py  utils.py  worker.py  worker_task_manager.py  worker_tasks_concordance.py  worker_tasks_download.py  worker_tasks_import.py  worker_tasks_quotation.py  worker_tasks_token.py  (+7 more)
src/ldaca_wordflow/models/: __init__.py  ai_annotation.py  analysis_common.py  auth.py  concordance.py  data_operations.py  dataframe.py  db.py  files.py  nodes.py  polars_expression.py  preferences.py  quotation.py  sequential_analysis.py  shared.py  (+3 more)
tests/: conftest.py  test_deploy.py  test_describe_datetime.py  test_describe_endpoint.py  test_docs_sync.py  test_quotation_clear_endpoint.py  test_quotation_preferences.py  test_resource_access.py  test_sequential_case_fold.py  test_start_server.py  test_text_default_stop_words.py  test_token_frequencies_truncation.py  test_token_frequency_defaults.py  test_topic_modeling_clear_endpoint.py  test_uv_workspace_configuration.py  test_workspace_save_as_removed.py
tests/integration/: test_ai_annotation_paging.py  test_analysis_persistence.py  test_api_workspaces.py  test_auth.py  test_auth_core.py  test_auth_current.py  test_comprehensive_analysis.py  test_compute_column_expression.py  test_concordance_detach.py  test_concordance_unified.py  test_detach_artifact_handoff.py  test_feedback.py  test_filter_preview.py  test_lazy_flow.py  test_main.py  test_node_copy.py  test_replace_endpoint.py  test_snapshots_endpoints.py  test_task_manager_endpoints.py  test_text_column_persistence_unified.py  test_text_default_stop_words.py  test_topic_modeling_parameters.py  test_workspace_name_validation.py  test_workspace_rename_rebase.py
tests/unit/: test_add_node_naming.py  test_ai_annotation_language_hint.py  test_analysis_cache.py  test_concat_endpoints.py  test_concordance_detach_worker.py  test_concordance_dispersion_detach_worker.py  test_concordance_helpers.py  test_concordance_materialize_tokens_mode.py  test_concordance_page_size_all.py  test_concordance_tokens_mode.py  test_concordance_whole_word_cjk.py  test_config.py  test_core_utils.py  test_data_casting.py  test_datatype_detection.py  test_db.py  test_derived_columns_endpoints.py  test_derived_columns_lazy.py  test_derived_columns_tokenise.py  test_derived_propagation_endpoints.py  test_embedding_cache.py  test_feedback_api.py  test_files_delete_cleanup.py  test_files_folder_ops.py  test_files_ldaca_tasks.py  test_files_list_readme.py  test_files_preview.py  test_filter_datetime_dtype.py  test_frontend_sync.py  test_i18n_resolver.py  test_import_sample_data.py  test_join_behavior.py  test_ldaca_tabular_config.py  test_model_prefetch.py  test_mps_embedder.py  test_node_tokenizer_preferences_endpoints.py  test_oni_client.py  test_onnx_embedder.py  test_openapi_operation_ids.py  test_package_backend_runtime.py  (+35 more)
(+107 files in other folders)
