[project]
name = "ldaca-web-app"
version = "0.2.7"
description = "LDaCA Web App - FastAPI backend with bundled production frontend for the Language Data Commons of Australia"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Australian Text Analytics Platform" }]
keywords = [
    "ldaca",
    "text-analytics",
    "corpus",
    "linguistics",
    "fastapi",
    "web-app",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "aiosqlite>=0.21.0",
    "bertopic>=0.17.3",
    "onnxruntime>=1.18.0",
    "tokenizers>=0.21.0",
    "fastapi-users[sqlalchemy]>=14.0.1",        # Includes fastapi, python-multipart, sqlalchemy
    "fastapi[standard]>=0.135.0",               # Includes uvicorn, pydantic, starlette
    "fastexcel>=0.18.0",
    "xlsxwriter>=3.2.0",                        # Required by polars DataFrame.write_excel for xlsx export
    "google-auth-oauthlib>=1.2.2",              # Includes google-auth
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "psutil>=6.1.0",                            # Process management for proper cleanup of child processes
    "docworkspace>=0.2.6",
    # Polars 1.40 splits the Rust runtime into feature tiers; the default
    # `polars-runtime-32` lacks Categorical/Decimal/etc. support, which
    # breaks LazyFrame.deserialize() for plans containing those dtypes.
    # `rtcompat` pulls in `polars-runtime-compat` (full feature set).
    "polars[rtcompat]>=1.40.0",
    # polars-text 0.1.7 adds the `random` polars-plan feature (plus 10 more
    # future-proofing features). Older wheels (<=0.1.6) fail to deserialize
    # any workspace plan containing `.sample()` / `.shuffle()` with
    # `unknown variant 'Random'` — workspace save/load both walk every plbin
    # through `polars_text.list_source_paths` (docworkspace GC + rebase),
    # turning the missing variant into an HTTP 500. 0.1.7 also enables
    # `bitwise`, `is_close`, `arg_where`, `hive_partitions`, `scan_lines`,
    # `dtype-extension`, etc., to cover the full DslPlan surface that
    # Python polars 1.40 wheels emit.
    "polars-text>=0.1.7",
    "pyarrow>=16.0.0",
    "tbb>=2022.3.1 ; sys_platform != 'darwin'",
    "openai>=2.26.0",
    "spacy>=3.7.0",
    # bertopic requires `sentence-transformers` with no version floor.  On
    # Python 3.14 uv's resolver backtracks to the ancient 2.2.2 sdist, which
    # imports the removed `cached_download` symbol from huggingface_hub and
    # crashes on first use.  3.0.0 is the first release that uses the
    # modern hf_hub_download API.
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
ldaca = ["ldaca-loader"]
deploy = ["jupyter-server-proxy>=4.4.0", "ipython>=9.5.0"]

[project.scripts]
ldaca-web-app = "ldaca_web_app.cli:main"

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "workspace: marks tests related to workspace functionality",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[dependency-groups]
dev = ["twine>=6.2.0", "pytest-asyncio>=0.23.0"]

[tool.ty.src]
exclude = ["**/_vendor/"]

[tool.ty.analysis]
# Optional dependencies guarded by try/except ImportError
allowed-unresolved-imports = [
    "ldacatabulator.**",
    "hatchling.builders.hooks.plugin.interface",
]

[tool.hatch.build]
# The extracted build/ dir is in .gitignore; force-include it so both
# the archive *and* the ready-to-serve directory ship in the package.
artifacts = ["src/ldaca_web_app/resources/frontend/build/**"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/scripts/hatch_build.py",
    "/src/ldaca_web_app/resources/**",
    "/src/ldaca_web_app/_vendor/GenderGapTracker/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ldaca_web_app"]
include = [
    "src/ldaca_web_app/resources/**",
    "src/ldaca_web_app/_vendor/GenderGapTracker/**",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv.sources]
# docworkspace = { path = "../docworkspace", editable = true }
ldaca-loader = { git = "https://github.com/Australian-Text-Analytics-Platform/ldaca-tabulator", branch = "ldaca_web_app_integration" }
