[project]
name = "ldaca-wordflow"
version = "0.4.4"
description = "LDaCA Wordflow - FastAPI backend with bundled production frontend for the Language Data Commons of Australia"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Australian Text Analytics Platform" }]
keywords = [
    "ldaca",
    "text-analytics",
    "corpus",
    "linguistics",
    "fastapi",
    "web-app",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "aiosqlite>=0.21.0",
    "bertopic>=0.17.3",
    "onnxruntime>=1.18.0",
    "tokenizers>=0.21.0",
    "fastapi-users[sqlalchemy]>=14.0.1",        # Includes fastapi, python-multipart, sqlalchemy
    "fastapi[standard]>=0.135.0",               # Includes uvicorn, pydantic, starlette
    "fastexcel>=0.18.0",
    "xlsxwriter>=3.2.0",                        # Required by polars DataFrame.write_excel for xlsx export
    "google-auth-oauthlib>=1.2.2",              # Includes google-auth
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "psutil>=6.1.0",                            # Process management for proper cleanup of child processes
    "docworkspace>=0.2.8",
    # Polars 1.40 splits the Rust runtime into feature tiers; the default
    # `polars-runtime-32` lacks Categorical/Decimal/etc. support, which
    # breaks LazyFrame.deserialize() for plans containing those dtypes.
    # `rtcompat` pulls in `polars-runtime-compat` (full feature set).
    "polars[rtcompat]>=1.40.0",
    # polars-text 0.2.0 shipped the multilingual tokenizer additions:
    # jieba ZH (`model="jieba"`), Lindera JA + KO (`model="lindera-ja-ipadic"`
    # etc.), `tokenize_with_offsets`, and Unicode-aware sentence/word counts.
    # 0.2.1 is the perf release: single-sweep byte→char conversion (the
    # Lindera regression fix), `to_lowercase` short-circuit for case-free
    # backends, and a flat list-of-struct builder. On a 13k-row JP corpus
    # the Lindera path drops from 1.43s → 0.23s (~6×) with identical
    # token output. The cache layer in `core.tokens_cache` assumes this
    # build so pin >=0.2.1.
    # Older wheels (<=0.1.7) fall through to `load_hf_tokenizer` for the
    # lindera model IDs, which then tries to fetch them as HF Hub model repos
    # and dies with "Failed to fetch tokenizer.json for lindera-ja-ipadic"
    # the first time a derived JA/KO tokens column gets lazily evaluated
    # (e.g. on a concordance call). The polars-plan feature set
    # (`random`, `ffi_plugin`, `bitwise`, `is_close`, `arg_where`,
    # `hive_partitions`, `scan_lines`, `dtype-extension`, ...) is also
    # retained so workspace save/load still covers the full DslPlan
    # surface that Python polars 1.40 wheels emit.
    "polars-text>=0.2.1",
    "pyarrow>=16.0.0",
    "tbb>=2022.3.1 ; sys_platform != 'darwin'",
    "openai>=2.26.0",
    "spacy>=3.7.0",
    # bertopic requires `sentence-transformers` with no version floor.  On
    # Python 3.14 uv's resolver backtracks to the ancient 2.2.2 sdist, which
    # imports the removed `cached_download` symbol from huggingface_hub and
    # crashes on first use.  3.0.0 is the first release that uses the
    # modern hf_hub_download API.
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
ldaca = ["ldaca-loader"]
deploy = ["jupyter-server-proxy>=4.4.0", "ipython>=9.5.0"]

[project.scripts]
ldaca-wordflow = "ldaca_wordflow.cli:main"
ldaca-web-app = "ldaca_wordflow.cli:main"

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "workspace: marks tests related to workspace functionality",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[dependency-groups]
dev = ["twine>=6.2.0", "pytest-asyncio>=0.23.0"]

[tool.ty.src]
exclude = ["**/_vendor/"]

[tool.ty.analysis]
# Optional dependencies guarded by try/except ImportError
allowed-unresolved-imports = [
    "ldacatabulator.**",
    "hatchling.builders.hooks.plugin.interface",
    "pytest",
    "_pytest.**",
]

[tool.hatch.build]
# The extracted build/ dir is in .gitignore; force-include it so both
# the archive *and* the ready-to-serve directory ship in the package.
artifacts = ["src/ldaca_wordflow/resources/frontend/build/**"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/scripts/hatch_build.py",
    "/src/ldaca_wordflow/resources/**",
    "/src/ldaca_wordflow/_vendor/GenderGapTracker/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ldaca_wordflow"]
include = [
    "src/ldaca_wordflow/resources/**",
    "src/ldaca_wordflow/_vendor/GenderGapTracker/**",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv.sources]
ldaca-loader = { git = "https://github.com/Australian-Text-Analytics-Platform/ldaca-tabulator", branch = "ldaca_web_app_integration" }
