[project]
name = "ldaca-wordflow"
version = "0.5.0"
description = "LDaCA Wordflow - FastAPI backend with bundled production frontend for the Language Data Commons of Australia"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Australian Text Analytics Platform" }]
keywords = [
    "ldaca",
    "text-analytics",
    "corpus",
    "linguistics",
    "fastapi",
    "web-app",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "aiosqlite>=0.21.0",
    "bertopic>=0.17.3",
    "duckdb>=1.4.0",
    "fastapi-users[sqlalchemy]>=14.0.1",        # Includes fastapi, python-multipart, sqlalchemy
    "fastapi[standard]>=0.135.0",               # Includes uvicorn, pydantic, starlette
    "fastexcel>=0.18.0",
    "xlsxwriter>=3.2.0",                        # Required by polars DataFrame.write_excel for xlsx export
    "google-auth-oauthlib>=1.2.2",              # Includes google-auth
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "orjson>=3.10.0",
    "psutil>=6.1.0",                            # Process management for proper cleanup of child processes
    "docworkspace>=0.2.8",
    "polars-text>=0.3.0",
    "pyarrow>=16.0.0",
    "rocrate-tabular>=0.1.4",
    "tbb>=2022.3.1 ; sys_platform != 'darwin'",
    "openai>=2.26.0",
    "spacy>=3.7.0",
    "sentence-transformers>=0.4.1",
]

[project.optional-dependencies]
deploy = ["jupyter-server-proxy>=4.4.0", "ipython>=9.5.0"]

[project.scripts]
ldaca-wordflow = "ldaca_wordflow.cli:main"
ldaca-web-app = "ldaca_wordflow.cli:main"

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "workspace: marks tests related to workspace functionality",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[dependency-groups]
dev = ["twine>=6.2.0", "pytest-asyncio>=0.23.0"]

[tool.ty.src]
exclude = ["**/_vendor/"]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "hatchling.builders.hooks.plugin.interface",
    "pytest",
    "_pytest.**",
]

[tool.hatch.build]
# The extracted build/ dir is in .gitignore; force-include it so both
# the archive *and* the ready-to-serve directory ship in the package.
artifacts = ["src/ldaca_wordflow/resources/frontend/build/**"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/scripts/hatch_build.py",
    "/src/ldaca_wordflow/resources/**",
    "/src/ldaca_wordflow/_vendor/GenderGapTracker/**",
    "/src/ldaca_wordflow/_vendor/rocrate-tabular/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ldaca_wordflow"]
include = [
    "src/ldaca_wordflow/resources/**",
    "src/ldaca_wordflow/_vendor/GenderGapTracker/**",
    "src/ldaca_wordflow/_vendor/rocrate-tabular/**",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv.sources]
docworkspace = { path = "../docworkspace", editable = true }
polars-text = { path = "../polars-text", editable = true }
polars-source-utils = { path = "../polars-source-utils", editable = true }
rocrate-tabular = { path = "src/ldaca_wordflow/_vendor/rocrate-tabular" }
